# RCS_2026_Drone_Control

./: .gitignore  .mxproject  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.old  COD_H7_Template.ioc  README.md  STM32H723XG_FLASH.ld  cmsis-dap.cfg  stlink.cfg  stm32.mak
Core/Inc/: FreeRTOSConfig.h  stm32h7xx_it.h
Core/Src/: dma.c  fdcan.c  freertos.c  gpio.c  main.c  stm32h7xx_it.c  tim.c
MDK-ARM/: COD_H7_Template.uvguix.29075  COD_H7_Template.uvguix.34517  COD_H7_Template.uvguix.admin  COD_H7_Template.uvoptx  COD_H7_Template.uvprojx
MDK-ARM/COD_H7_Template/: COD_H7_Template.axf  COD_H7_Template.build_log.htm  COD_H7_Template.htm  COD_H7_Template.lnp  COD_H7_Template_COD_H7_Template.dep  adc.crf  adc.d  bdma.crf  bdma.d  bmi088.crf  bmi088.d  bsp_adc.crf  bsp_adc.d  bsp_can.crf  bsp_can.d  bsp_dwt.d  bsp_gpio.crf  bsp_gpio.d  bsp_mcu.crf  bsp_mcu.d  bsp_pwm.crf  bsp_pwm.d  bsp_spi.crf  bsp_spi.d  bsp_tick.crf  bsp_tick.d  bsp_uart.crf  bsp_uart.d  can_task.crf  can_task.d  cmsis_os.crf  cmsis_os.d  control_task.crf  control_task.d  controller.d  crc.crf  crc.d  croutine.crf  croutine.d  detect_task.crf  (+155 more)
MDK-ARM/RTE/_COD_H7_Template/: RTE_Components.h
RCS_Drone_H7_01/: RCS_Drone_H7_01.sln  RCS_Drone_H7_01.vgdbcmake  stm32.xml
RCS_Drone_H7_01/.visualgdb/CodeDB/RCS_Drone_H7_01.vgdbcmake-Debug-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  Robot_Task-00001.rdb  codedb.lck  sysmem-00001.rdb
RCS_Drone_H7_01/.visualgdb/VisualGDBCache/RCS_Drone_H7_01-Debug-VisualGDB/: ImplicitCompilerFlags.xml
RCS_Drone_H7_01/.visualgdb/VisualGDBCache/RCS_Drone_H7_01-Debug-VisualGDB/CodeModelCache/: CodeModelIndex.txt  cache-v2-9da44c7d2eecbabe58c2.json  cmakeFiles-v1-87df7c2564ed5dc92c57.json  codemodel-v2-f068a69fa46c2905c505.json  index-2026-02-07T04-40-45-0429.json  target-COD_H7_Template-DEBUG-728d38e6c8a7b1d10e22.json  target-FreeRTOS-DEBUG-616a1f77fd66b468ab6e.json  target-STM32_Drivers-DEBUG-90af7fc66bdb03bef0cc.json  target-USB_Device_Library-DEBUG-81502a4bd65a70ce1165.json
USER/Application/Task/Inc/: Config.h  Control_Task.h  INS_Task.h  Referee_Task.h  Robot_Task.h  robot_def.h  robot_soft_task.h
USER/Application/Task/Src/: CAN_Task.c  Control_Task.c  Detect_Task.c  INS_Task.c  Referee_Task.c  Robot_Task.c
USER/Application/Task/gimbal/: gimbal.c  gimbal.h
USER/Application/Task/shoot/: shoot.c
USER/BSP/Inc/: bsp_can.h  bsp_uart.h
USER/BSP/Src/: bsp_can.c  bsp_dwt.c  bsp_mcu.c  bsp_uart.c
USER/Components/Algorithm/Inc/: controller.h
USER/Components/Algorithm/Src/: controller.c
USER/Components/Device/Inc/: Minipc.h  Motor.h  Referee_System.h  Remote_Control_COD.h  VT03.h  dji_motor.h  dm_motor.h  light.h  motor_def.h  ws2812b.h
USER/Components/Device/Src/: Bmi088.c  MiniPC.c  Motor.c  Referee_System.c  Remote_Control_COD.c  VT03.c  dji_motor.c  dm_motor.c  light.c  ws2812b.c
USER/Components/Message/: message_center.c  message_center.h  referee_UI.c  referee_UI.h  referee_protocol.h
cmake/stm32cubemx/: CMakeLists.txt
